WIP: estado quebrado antes de rollback (55 classes)